<resources>
    <string name="app_name">Team Tracker Client</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect">Connect</string>
    <string name="connect_name">Name:</string>
    <string name="connect_port">Port:</string>
    <string name="edit_port">Enter port</string>
    <string name="edit_name">Enter your login</string>
    <string name="text_adderss">Address:</string>
    <string name="edit_adderss">Enter address</string>
    <string name="menu_text_count_j">Enter count jobs:</string>
    <string name="menu_text_count_pr">Enter count proccessors:</string>
    <string name="text_solve">Solve</string>
    <string name="text_wait">Task is solving. Please, wait...</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_result">Results</string>
    <string name="text_newtask">New task</string>
    <string name="text_exit">Exit</string>
</resources>
